<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--

Copyright 2023-2024 Steinar Bang

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and limitations
under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xml:space="preserve" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>no.priv.bang.pom</groupId>
        <artifactId>bang-authservice-client-pom</artifactId>
        <version>2.0.6</version>
    </parent>
    <groupId>no.priv.bang.ratatoskr</groupId>
    <artifactId>ratatoskr</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>Ratatoskr</name>

    <properties>
        <snakeyaml.version>1.17</snakeyaml.version>
        <open-iconic.version>1.1.1</open-iconic.version>
        <sonar.cpd.exclusions>
            **/RatatoskrServiceProvider.java,
            **/RatatoskrTestDbLiquibaseRunner.java,
            **/RatatoskrProductionDbLiquibaseRunner.java,
        </sonar.cpd.exclusions>
        <sonar.issue.ignore.multicriteria>e1,e2,e3,e4,e5</sonar.issue.ignore.multicriteria>
        <sonar.issue.ignore.multicriteria.e1.ruleKey>java:S2160</sonar.issue.ignore.multicriteria.e1.ruleKey>
        <sonar.issue.ignore.multicriteria.e1.resourceKey>**/ratatoskr.services/**/*.java</sonar.issue.ignore.multicriteria.e1.resourceKey>
        <sonar.issue.ignore.multicriteria.e2.ruleKey>java:S5976</sonar.issue.ignore.multicriteria.e2.ruleKey>
        <sonar.issue.ignore.multicriteria.e2.resourceKey>**/src/test/java/**/*.java</sonar.issue.ignore.multicriteria.e2.resourceKey>
        <sonar.issue.ignore.multicriteria.e3.ruleKey>java:S6813</sonar.issue.ignore.multicriteria.e3.ruleKey>
        <sonar.issue.ignore.multicriteria.e3.resourceKey>**/ratatoskr.web.api/src/main/java/**/resources/*.java</sonar.issue.ignore.multicriteria.e3.resourceKey>
        <sonar.issue.ignore.multicriteria.e4.ruleKey>java:S115</sonar.issue.ignore.multicriteria.e4.ruleKey>
        <sonar.issue.ignore.multicriteria.e4.resourceKey>**/ratatoskr.asvocabulary/**/*.java</sonar.issue.ignore.multicriteria.e4.resourceKey>
        <sonar.issue.ignore.multicriteria.e5.ruleKey>java:S5961</sonar.issue.ignore.multicriteria.e5.ruleKey>
        <sonar.issue.ignore.multicriteria.e5.resourceKey>**/ParseTest.java</sonar.issue.ignore.multicriteria.e5.resourceKey>
        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../jacoco-coverage-report/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.priv.bang.pom</groupId>
                <artifactId>bang-bom</artifactId>
                <version>${bang-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.karaf</groupId>
                <artifactId>karaf-bom</artifactId>
                <version>${karaf.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.jupiter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>no.priv.bang.beans</groupId>
                <artifactId>beans-bom</artifactId>
                <version>${beans.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>no.priv.bang.osgiservice</groupId>
                <artifactId>osgiservice-bom</artifactId>
                <version>${bang-osgi-service.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>no.priv.bang.osgi.service.adapters</groupId>
                <artifactId>adapters-bom</artifactId>
                <version>${osgi-service-adapters.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>no.priv.bang.karaf</groupId>
                <artifactId>jersey-feature-bom</artifactId>
                <version>${jersey-feature.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>no.priv.bang.servlet</groupId>
                <artifactId>servlet-bom</artifactId>
                <version>${bang-servlet.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>no.priv.bang.authservice</groupId>
                <artifactId>authservice-bom</artifactId>
                <version>${authservice.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.shiro</groupId>
                <artifactId>shiro-bom</artifactId>
                <version>${shiro.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>2.3.1</version>
            </dependency>
            <dependency>
                <groupId>org.webjars.bower</groupId>
                <artifactId>open-iconic</artifactId>
                <version>${open-iconic.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <show>private</show>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>3.2.0</version>
            </extension>
        </extensions>
    </build>

    <distributionManagement>
        <repository>
            <id>ssh-maven-travis</id>
            <url>sftp://maven.bang.priv.no/repository</url>
        </repository>
        <snapshotRepository>
            <id>ssh-maven-travis</id>
            <url>sftp://maven.bang.priv.no/repository</url>
        </snapshotRepository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>release-sign-artifact</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <modules>  <module>ratatoskr.db.liquibase</module>
    <module>ratatoskr.db.liquibase.test</module>
    <module>ratatoskr.db.liquibase.production</module>
    <module>ratatoskr.asvocabulary</module>
    <module>ratatoskr.services</module>
    <module>ratatoskr.backend</module>
    <module>ratatoskr.backend.testdata</module>
    <module>ratatoskr.web.security</module>
    <module>ratatoskr.web.api</module>
    <module>ratatoskr.web.frontend</module>
    <module>karaf</module>
    <module>ratatoskr.tests</module>
    <module>jacoco-coverage-report</module>
</modules></project>
